[package]
name = "kale_duration"
version = "0.1.1"
edition = "2021"
description = "A simple rust libary to provide a way to parse durations quickly without having to think about it"
license = "MIT"
readme = "README.md"
repository = "https://github.com/kleinschrader/kale_duration"

[features]
serde = ["dep:serde"]

[dependencies]
serde = { version = "1", optional = true }

[dev-dependencies]
serde_json = {version = "1"}